2008-04-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itcompat.h, itpp/base/math/trig_hyp.h,
	itpp/signal/poly.cpp, itpp/signal/window.cpp,
	itpp/base/itcompat.cpp: Move asinh(), acosh() and atanh() to
	itcompat.{cpp,h}

	These functions are conditionally defined on platforms, which do
	not provide their own implementations. Therefore the best place
	for them is in itcompat.{cpp,h} files.

	* itpp/base/itcompat.h, itpp/base/math/log_exp.h: Move log1p() and
	log2() definitions from log_exp.h to itcompat.h

	BTW, log2() now uses "static const double" variable initialised
	with the result of "1.0 / std::log(2.0)" division.

	* itpp/base/itcompat.cpp, itpp/base/itcompat.h,
	itpp/base/math/error.cpp, itpp/base/math/error.h: Move erf(double)
	and erfc(double) error functions to itcompat.{cpp,h}

	These functions are conditionally defined on platforms, which do
	not provide their own implementations. Therefore the best place
	for them is in itcompat.{cpp,h} files.

	* itpp/base/itcompat.cpp, itpp/base/itcompat.h,
	itpp/base/math/elem_math.cpp, itpp/base/math/elem_math.h: Move
	tgamma(), lgamma() and cbrt() definitions to itcompat.{cpp,h}

	These three functions are conditionally defined on platforms, which
	do not provide their own implementations. Therefore the best place
	for them is in itcompat.{cpp,h} files.

	* configure.ac.in, itpp/base/converters.h, itpp/base/itcompat.h,
	itpp/config_msvc.h: Move portability related definitions from
	config.h to itcompat.h

	* itpp/base/bessel/gamma.cpp, itpp/base/itcompat.h,
	itpp/base/math/log_exp.h, itpp/base/math/misc.cpp,
	itpp/base/math/misc.h, itpp/base/random.cpp,
	itpp/stat/mog_generic.cpp: Move isinf(), isnan() and isfinite()
	definitions to itcompat.h

	These three functions are conditionally defined on platforms,
	which do not have them in standard headers. Therefore, the best
	location for them in IT++ is the itcompat.h header file.

	* configure.ac.in, itpp/base/itcompat.cpp, itpp/base/itcompat.h,